WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256193
Assert that the scrolling tree is valid, and fix issues with negative z-index layers
https://bugs.webkit.org/show_bug.cgi?id=256193
Summary
Assert that the scrolling tree is valid, and fix issues with negative z-index...
Simon Fraser (smfr)
Reported
2023-05-01 20:38:11 PDT
We need to assert in the web process that a committed scrolling tree is valid, which will make it easier to track down causes of MESSAGE_CHECKs related to invalid scrolling trees.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-01 20:38:41 PDT
<
rdar://problem/108769471
>
Simon Fraser (smfr)
Comment 2
2023-05-01 20:49:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13350
EWS
Comment 3
2023-05-02 21:48:16 PDT
Committed
263620@main
(46572d8428cb): <
https://commits.webkit.org/263620@main
> Reviewed commits have been landed. Closing PR #13350 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug